Unneeded colour variables removed

--- a/src/_variables.scss
+++ b/src/_variables.scss
@@ -6,14 +6,9 @@ $colors: () !default;
 $colors: map-merge(
     (
         // Required base colours
-        "white":                rgb(255, 255, 255),
-        "black":                rgb(17, 17, 17),
         "primary":              rgb(10, 211, 255),
-        "secondary":            rgb(235, 236, 238),
         // Greyscale
-        "smoke":                rgb(240, 240, 240),
-        "silver":               rgb(221, 221, 221),
-        "gray":                 rgb(170, 170, 170)
+        "silver":               rgb(221, 221, 221)
     ),
     $colors
 );
